# kaggle_experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt  store_sale_forcast.py
.github/workflows/: pylint.yml
cibmtr/: eda.py
cmi/: dataset.py  main.py  metrics.py  models.py  prime.py
s4_e10/: loan_approval_prediction.py
s4_e11/: baseline_predict_mental_health.py  catboost_predict_mental_health.py  lightgbm_predict_mental_health.py  nn_predict_mental_health.py  saint_predict_mental_health.py  tabnet_predict_mental_health.py  xgboost_predict_mental_health.py
s5_e4/: podcast_listening_time.py
s5_e5/: cv.txt  predict_calorie_expenditure_eda.py  predict_calorie_expenditure_featuretools.py  predict_calorie_expenditure_gpu.py  predict_calorie_expenditure_lightgbm.py  predict_calorie_expenditure_xgboost.py  predict_calories_expenditure_catboost.py
s5_e5/feat_tune/: feature_engineering.py  modelling.py  run.py
